--- a/.github/workflows/paketo.yaml
+++ b/.github/workflows/paketo.yaml
@@ -1,62 +1,19 @@
-name: Build Docker image
-
-on:
-  - push
-  - workflow_dispatch
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+on: [push]
 jobs:
-  run-buildpack-and-push-oci-image:
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
 
-      - name: buildpacks-action
-        # You may pin to the exact commit or the version.
-        uses: mamezou-tech/buildpacks-action
-        # uses: mamezou-tech/buildpacks-action@v0.5.0
-        with:
-          # Name of container image
-          image: ${{ env.IMAGE_NAME }}
-          # Tag of container image
-          #tag: # optional, default is latest
-          # Path to target application, defaults to the current directory
-          #path: # optional, default is .
-          # Builder to use
-          builder: paketobuildpacks/builder:base
-          # Custom buildpacks to use
-          buildpacks: gcr.io/paketo-buildpacks/go
-          # Build-time environment variables
-          # env: # optional
-          # Read build-time environment variables from these files
-          # env_files: # optional
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: List Docker images
-        run: docker images
-
-      - name: Tag Docker image
-        run: docker image tag ${{ env.IMAGE_NAME }} ${{ env.REGISTRY}}/${{ env.IMAGE_NAME }}
-
-      - name: Push Docker image
-        run: docker image push ${{ env.REGISTRY}}/${{ env.IMAGE_NAME }}
