--- a/.github/workflows/paketo.yaml
+++ b/.github/workflows/paketo.yaml
@@ -1,6 +1,8 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Build Docker image
 on: [push]
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
