--- a/.github/workflows/paketo.yaml
+++ b/.github/workflows/paketo.yaml
@@ -4,8 +4,11 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 jobs:
-  Explore-GitHub-Actions:
+  run-buildpack-and-push-oci-image:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
