--- a/.github/workflows/paketo.yaml
+++ b/.github/workflows/paketo.yaml
@@ -13,12 +13,37 @@ jobs:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+
       - name: Check out repository code
         uses: actions/checkout@v4
+
+      - name: buildpacks-action
+        # You may pin to the exact commit or the version.
+        uses: mamezou-tech/buildpacks-action
+        # uses: mamezou-tech/buildpacks-action@v0.5.0
+        with:
+          # Name of container image
+          image: ${{ env.IMAGE_NAME }}
+          # Tag of container image
+          #tag: # optional, default is latest
+          # Path to target application, defaults to the current directory
+          #path: # optional, default is .
+          # Builder to use
+          builder: paketobuildpacks/builder:base
+          # Custom buildpacks to use
+          buildpacks: gcr.io/paketo-buildpacks/go
+          # Build-time environment variables
+          # env: # optional
+          # Read build-time environment variables from these files
+          # env_files: # optional
+
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+
+          - run: echo "🍏 This job's status is ${{ job.status }}."
 
