--- a/.github/workflows/paketo.yaml
+++ b/.github/workflows/paketo.yaml
@@ -17,25 +17,12 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: buildpacks-action
-        # You may pin to the exact commit or the version.
-        uses: mamezou-tech/buildpacks-action
-        # uses: mamezou-tech/buildpacks-action@v0.5.0
+      - name: Build image
+        uses: mamezou-tech/buildpacks-action@master
         with:
-          # Name of container image
           image: ${{ env.IMAGE_NAME }}
-          # Tag of container image
-          #tag: # optional, default is latest
-          # Path to target application, defaults to the current directory
-          #path: # optional, default is .
-          # Builder to use
           builder: paketobuildpacks/builder:base
-          # Custom buildpacks to use
           buildpacks: gcr.io/paketo-buildpacks/go
-          # Build-time environment variables
-          # env: # optional
-          # Read build-time environment variables from these files
-          # env_files: # optional
 
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
 
